eye(), identity() and empty() functions completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -894,9 +894,420 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84901125-3800-4935-9580-05d2f79d109d",
+   "metadata": {},
+   "source": [
+    "#### 7. eye()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "99a366b8-485d-404d-9cf5-a1c7402ef4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(np.eye)\n",
+    "# --> eye(N, M=None, k=0, dtype=<class 'float'>, order='C', *, like=None)\n",
+    "# --> Return a 2-D array with ones on the diagonal and zeros elsewhere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a85a50e-6a98-4f98-84b4-6583d99ba350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(2,3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "07ebc32e-e442-4934-8359-2c3b2fd50905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0.]\n",
+      " [0. 1.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(3,2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8ac160bd-e6bb-47d7-a434-da06dee5cce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e262bce-378b-476e-9330-7fa942140b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(3,dtype=int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "af020603-5d07-46da-9d4f-16fc6b55d80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(5,k=1)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "adf85002-bbb5-46fe-bdc0-0caf2257e2ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(5,k=-3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f999a5-abcb-43dd-a809-c7affa96ea48",
+   "metadata": {},
+   "source": [
+    "#### 8. identity()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b725a4-8abe-415c-8da0-e118895ac3ef",
+   "id": "c4a4d40c-b999-44a6-87c8-a49bddae783d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exactly same as eye() function except that \n",
+    "# 1. It is always square matrix\n",
+    "# 2. only main diagonal contains 1s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "80225d36-5e82-4756-93cb-03c5c9fdb3c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(np.identity)\n",
+    "# --> identity(n, dtype=None, *, like=None)\n",
+    "# --> Return the identity array.\n",
+    "# --> The identity array is a square array with ones on the main diagonal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "63a53cae-fd38-453d-852b-e0b2f18c4632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.identity(5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "80a91e28-389e-4974-9473-5521773b75a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 1 0 0]\n",
+      " [0 0 0 1 0]\n",
+      " [0 0 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.identity(5,dtype=int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "37610347-da06-495c-94bb-cff6b306e7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(np.empty)\n",
+    "# --> empty(shape, dtype=float, order='C', *, like=None)\n",
+    "# --> Return a new array of given shape and type, without initializing entries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70e592f-9b66-4399-b7fd-9ab13a658791",
+   "metadata": {},
+   "source": [
+    "#### 9. empty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "abdcac33-f39f-4349-b4f8-4f3fe2ec2498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.e-324 0.e+000 0.e+000]\n",
+      " [0.e+000 5.e-324 0.e+000]\n",
+      " [0.e+000 0.e+000 5.e-324]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty((3,3))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fcdcb63b-63cc-45f3-b105-84fcdb3ebc1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.68610835e-316 0.00000000e+000 1.14448379e+243 1.21698002e-152]\n",
+      "  [8.70860497e+183 4.89584248e-085 6.01347002e-154 3.32234062e+257]\n",
+      "  [2.45652619e+198 5.22373805e+257 2.43812981e-152 1.48890307e+195]]\n",
+      "\n",
+      " [[4.96181029e+228 5.98129759e-154 5.66774924e+160 1.28625507e+248]\n",
+      "  [6.01347002e-154 4.47593816e-091 6.01346953e-154 1.95662563e-152]\n",
+      "  [5.98189094e-154 6.01347002e-154 7.03540167e+199 1.54235981e+256]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty((2,3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "510cfaf0-3a15-434a-89ab-8c187804aea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[           35420604                   0                   0\n",
+      "                   0                   0 3472330710117071152\n",
+      " 7076330810053387821 3271411255263179056 4121187706026222642\n",
+      "          1697790257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty(10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3545c08d-efe8-44d2-8de4-bdcab12222c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[           35420604                   0                   0\n",
+      "                   0                   0 3472330710117071152\n",
+      " 7076330810053387821 3271411255263179056 4121187706026222642\n",
+      "          1697790257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty(10,dtype=int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb90d340-a5e3-40df-afb1-80b5b3f89317",
+   "metadata": {},
+   "source": [
+    "<!-- zeros() vs. empty() -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f62ef225-8efc-4218-930b-5ecf9d0a2f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192000144\n",
+      "192000144\n"
+     ]
+    }
+   ],
+   "source": [
+    "# memory consumption comparision\n",
+    "import sys\n",
+    "a = np.zeros((20000,30,40))\n",
+    "b = np.empty((20000,30,40))\n",
+    "print(sys.getsizeof(a))\n",
+    "print(sys.getsizeof(b))\n",
+    "# no difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02553316-c53e-414b-9af0-830cd631ea6e",
+   "metadata": {},
+   "source": [
+    "#### zeros() vs. empty()\n",
+    "* memory consumption\n",
+    "* time consumption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a1f19def-5a3b-4f8b-b279-56a55bd9932c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken by zeros(): 0:00:00.000140\n",
+      "Time taken by empty(): 0:00:00.000051\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time Consumption Comparision --> empty() is way more faster than zeros()\n",
+    "from datetime import datetime\n",
+    "\n",
+    "begin = datetime.now()\n",
+    "a = np.zeros((100000,300,40))\n",
+    "end = datetime.now()\n",
+    "print('Time taken by zeros():',end-begin)\n",
+    "a = None    # making the object eligible for garbage collection\n",
+    "begin = datetime.now()\n",
+    "a = np.empty((100000,300,40))\n",
+    "end = datetime.now()\n",
+    "print('Time taken by empty():',end-begin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3598f53c-db08-4df6-af59-35b5736efb92",
    "metadata": {},
    "outputs": [],
    "source": []
