creating array using random library completed

--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "53a7300f-61a2-4c59-99d2-8a5390ea29c3",
    "metadata": {},
    "outputs": [],
@@ -388,8 +388,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cd30af18-acb1-4358-816c-0f32f656e692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 0]\n",
+      " [0 0 1 0]\n",
+      " [0 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.eye(3,4,1,int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5dd11023-79d9-4f85-86f7-c0659beb7a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 1 0 0]\n",
+      " [0 0 0 1 0]\n",
+      " [0 0 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.identity(5,int)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fde7bb7d-73a8-463c-9db9-7b3700426b23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 'dhoni', True, 7.77, (10+20j))\n",
+      "[7 'dhoni' True 7.77 (10+20j)]\n",
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating an array with Heterogeneous Daya Types --> I love this hack !\n",
+    "L = (7,'dhoni',True,7.77,10+20j)\n",
+    "print(L)\n",
+    "a = np.array(L,dtype=object)\n",
+    "print(a)\n",
+    "print(a.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e1b258-9a14-4d24-9b60-27ff4f77d6d8",
    "metadata": {},
    "outputs": [],
    "source": []
