accessing elements of numpy array using indexing and slicing completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -2423,7 +2423,7 @@
    "id": "b1f2514c-8d3e-4325-8792-6249d1c7a3d0",
    "metadata": {},
    "source": [
-    "#### Array Attributes"
+    "## Array Attributes"
    ]
   },
   {
@@ -2512,7 +2512,7 @@
    "id": "70058165-318a-4492-9f05-bc9f01c1c644",
    "metadata": {},
    "source": [
-    "#### Numpy Data types"
+    "## Numpy Data types"
    ]
   },
   {
@@ -2685,9 +2685,363 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b98f59b5-049b-409b-b28a-8771209e938b",
+   "metadata": {},
+   "source": [
+    "## How to Access Elements of Numpy Array\n",
+    "- Indexing ---> only one element at a time\n",
+    "- Slicing ---> a group of elements \n",
+    "- Advanced Indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c412b9c-162e-400e-8234-4db08be132f4",
+   "metadata": {},
+   "source": [
+    "#### 1. Indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "590762cf-e4de-47b2-9645-41feb206e57f",
+   "metadata": {},
+   "source": [
+    "#### 1a. 1-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "390ec836-4ba1-424b-9dc7-9ea16644a876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accessing elements from 1-D Array\n",
+    "L = [10,20,30,40,50]\n",
+    "a = np.array(L)\n",
+    "print(a[0])\n",
+    "print(a[-1])\n",
+    "# print(a[10])   # IndexError: index 10 is out of bounds for axis 0 with size 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a1e5fb-6836-4ea0-bf2a-afa50f5e00e2",
+   "metadata": {},
+   "source": [
+    "#### 1b. 2-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "42523513-8de0-4eb4-8257-9591322fb7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 16 12 11]\n",
+      " [19 15 14 12]\n",
+      " [12 15 16 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10,21,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f42a778a-160b-4a32-a026-bf5436f37b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimentions: 2\n",
+      "14\n",
+      "11\n",
+      "16\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing Elements of 2-D Array\n",
+    "print('Dimentions:',a.ndim)\n",
+    "# accessing 14 1st row \n",
+    "print(a[0][0])\n",
+    "# accessing 11\n",
+    "print(a[-3][-1])\n",
+    "# accessing 16\n",
+    "print(a[2][2])\n",
+    "print(len(a))\n",
+    "# print(a[-2][-10])\n",
+    "# IndexError: index -10 is out of bounds for axis 0 with size 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf9a40c-eaf5-47bb-bc28-24b57e9cc140",
+   "metadata": {},
+   "source": [
+    "#### 1c. 3-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "6d36a44b-176d-4c72-9cbc-613c08fe4722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[77 92  2 20]\n",
+      "  [ 5 39 33 64]\n",
+      "  [57 19 65 61]]\n",
+      "\n",
+      " [[ 8 66 61 10]\n",
+      "  [27 96 75 13]\n",
+      "  [97 19 78 42]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing Elements of 3-D Array\n",
+    "a = np.random.randint(1,101,(2,3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d17a9290-7a45-4129-b55f-c8807395c355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "65\n",
+      "78\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing Elements\n",
+    "# 77\n",
+    "print(a[0][0][0])\n",
+    "# 65\n",
+    "print(a[0][2][2])\n",
+    "# 78\n",
+    "print(a[1][2][2])\n",
+    "# 13\n",
+    "print(a[1][1][3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af26d9e-83df-4445-ad17-299ebf376dc1",
+   "metadata": {},
+   "source": [
+    "#### 1d. 4-D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c60d7ead-b9f0-4257-8449-84621e7131c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[22  3 47 84 69]\n",
+      "   [57 70 20 27 23]\n",
+      "   [70 30 65 98 37]\n",
+      "   [63  1 20  7  9]]\n",
+      "\n",
+      "  [[34 96 20 82 86]\n",
+      "   [11 51 60 28 61]\n",
+      "   [14 43 32 72 83]\n",
+      "   [30 77 50 66 98]]\n",
+      "\n",
+      "  [[47 20 42 41 76]\n",
+      "   [74 85 18 85 96]\n",
+      "   [68 60 18 52 38]\n",
+      "   [64 13 44 33 30]]]\n",
+      "\n",
+      "\n",
+      " [[[65 97 27 96 99]\n",
+      "   [45 87 34 52 60]\n",
+      "   [57 20 53 22 59]\n",
+      "   [96 62 90 33 29]]\n",
+      "\n",
+      "  [[66 38 97  9 89]\n",
+      "   [ 1  4 44 72 18]\n",
+      "   [36 83 80 20 66]\n",
+      "   [60  7 91 85 47]]\n",
+      "\n",
+      "  [[ 5 39 84 96 45]\n",
+      "   [34 53 70 69 34]\n",
+      "   [88 84 59 57 31]\n",
+      "   [17 53 23  1 15]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(2,3,4,5))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "c0fc900a-a3a6-4622-85ac-3fdecb362f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72\n",
+      "85\n",
+      "1\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 72\n",
+    "print(a[0][1][2][3])\n",
+    "# 85\n",
+    "print(a[0][2][1][1])\n",
+    "# 1\n",
+    "print(a[1][1][1][0])\n",
+    "# 15\n",
+    "print(a[1][2][3][4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "c296ef0a-9d0f-43c3-ac95-3fa20cb4183b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1]), array([2]), array([3]), array([3]))"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(a==39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7f1ae922-3c7b-4b3e-beb8-a142522b678a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 1]), array([0, 2]), array([0, 3]), array([2, 4]))"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(a==17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbfbde8-b9a7-4190-bbba-ba54d230c4e2",
+   "metadata": {},
+   "source": [
+    "#### 2. Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "5d663ce6-a9ef-48f3-92b8-04f756996584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[66 56 84 10 34 42 79 95 22 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ed4952e2-6712-4249-a09a-2e2aa5e48ec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[84 10 34]\n",
+      "[84 10 34]\n",
+      "[95 22 12]\n",
+      "[66 56 84]\n",
+      "[66 56 84 10 34 42 79 95 22 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[2:5])\n",
+    "print(a[-8:-5])\n",
+    "print(a[7:])\n",
+    "print(a[:3])\n",
+    "print(a[:])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fbe566a-b974-4297-a136-585a9dc0197b",
+   "id": "dfeddcd9-1aa0-4646-bad5-368449b8efb0",
    "metadata": {},
    "outputs": [],
    "source": []
