slice operator and numpy array part 1 completed

--- a/Numpy/2_creating_array.ipynb
+++ b/Numpy/2_creating_array.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "c6eac9e2-7a77-4d17-8c65-4c1c5ec67743",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Creating Numpy Arrays"
    ]
@@ -11,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "29d383ef-c91d-494a-9ee3-de978c5e448e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 1. array()"
    ]
@@ -241,7 +245,9 @@
   {
    "cell_type": "markdown",
    "id": "044d0740-477e-42ee-8bcf-79f57319141a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 2. arange()"
    ]
@@ -369,7 +375,9 @@
   {
    "cell_type": "markdown",
    "id": "3d29c624-1634-4897-bc37-8db7887cd6ea",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 3. linspace()"
    ]
@@ -510,7 +518,9 @@
   {
    "cell_type": "markdown",
    "id": "7526c991-5397-4489-8730-8b69a3ed3637",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 4. zeros()"
    ]
@@ -756,7 +766,9 @@
   {
    "cell_type": "markdown",
    "id": "c01d195c-ff30-466f-99a5-b873d3983167",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 5. ones()"
    ]
@@ -804,7 +816,9 @@
   {
    "cell_type": "markdown",
    "id": "5af55ef6-adf7-4e34-ad7d-cd3c506c0433",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 6. full()"
    ]
@@ -896,7 +910,9 @@
   {
    "cell_type": "markdown",
    "id": "84901125-3800-4935-9580-05d2f79d109d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 7. eye()"
    ]
@@ -1053,7 +1069,9 @@
   {
    "cell_type": "markdown",
    "id": "c3f999a5-abcb-43dd-a809-c7affa96ea48",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 8. identity()"
    ]
@@ -1144,7 +1162,9 @@
   {
    "cell_type": "markdown",
    "id": "f70e592f-9b66-4399-b7fd-9ab13a658791",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 9. empty()"
    ]
@@ -1250,7 +1270,9 @@
   {
    "cell_type": "markdown",
    "id": "02553316-c53e-414b-9af0-830cd631ea6e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### zeros() vs. empty()\n",
     "* memory consumption\n",
@@ -1315,7 +1337,9 @@
   {
    "cell_type": "markdown",
    "id": "7b2f8dc2-6bb6-4e96-85bb-00b59f8b2eb0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10. creating array using random library:\n",
     "1. randint()\n",
@@ -1330,7 +1354,9 @@
   {
    "cell_type": "markdown",
    "id": "7930da17-d19a-4a5c-a645-173ed6bbedd8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10a. randint()"
    ]
@@ -1652,7 +1678,9 @@
   {
    "cell_type": "markdown",
    "id": "cfd7c0eb-24b8-4fd3-9797-395bc0ea0215",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10b. rand()"
    ]
@@ -1806,7 +1834,9 @@
   {
    "cell_type": "markdown",
    "id": "6318c469-e739-41a4-9a1b-8ae33b0fb41b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10c. uniform()"
    ]
@@ -1941,7 +1971,9 @@
   {
    "cell_type": "markdown",
    "id": "67fce81e-c8c6-485d-957a-2bcda8240fa8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10d. randn()"
    ]
@@ -2086,7 +2118,9 @@
   {
    "cell_type": "markdown",
    "id": "2a628595-b5c7-4c8b-8f92-0250f148ff89",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 10e. normal()"
    ]
@@ -2262,6 +2296,7 @@
    "cell_type": "markdown",
    "id": "36185c8a-1b7f-4a39-92d4-68ceafa00766",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "scrolled": true
    },
    "source": [
@@ -2421,7 +2456,9 @@
   {
    "cell_type": "markdown",
    "id": "b1f2514c-8d3e-4325-8792-6249d1c7a3d0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Array Attributes"
    ]
@@ -2510,7 +2547,9 @@
   {
    "cell_type": "markdown",
    "id": "70058165-318a-4492-9f05-bc9f01c1c644",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Numpy Data types"
    ]
@@ -2706,9 +2745,11 @@
   {
    "cell_type": "markdown",
    "id": "590762cf-e4de-47b2-9645-41feb206e57f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 1a. 1-D Array"
+    "#### 1a. 1-D ndarray"
    ]
   },
   {
@@ -2738,9 +2779,11 @@
   {
    "cell_type": "markdown",
    "id": "61a1e5fb-6836-4ea0-bf2a-afa50f5e00e2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 1b. 2-D Array"
+    "#### 1b. 2-D ndarray"
    ]
   },
   {
@@ -2799,9 +2842,11 @@
   {
    "cell_type": "markdown",
    "id": "5cf9a40c-eaf5-47bb-bc28-24b57e9cc140",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 1c. 3-D Array"
+    "#### 1c. 3-D ndarray"
    ]
   },
   {
@@ -2862,9 +2907,11 @@
   {
    "cell_type": "markdown",
    "id": "9af26d9e-83df-4445-ad17-299ebf376dc1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 1d. 4-D Array"
+    "#### 1d. 4-D ndarray"
    ]
   },
   {
@@ -2994,6 +3041,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ea1c779-67ec-4520-81d0-9b57543993fb",
+   "metadata": {},
+   "source": [
+    "#### 2a. 1-D ndarray"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "id": "5d663ce6-a9ef-48f3-92b8-04f756996584",
@@ -3040,8 +3095,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dfeddcd9-1aa0-4646-bad5-368449b8efb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[63 70 61 83 80  6 93 81 71 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ec411d38-2700-4250-9c5a-d7e43e7579db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[61 83 80  6 93 81]\n",
+      "[61 80 93]\n",
+      "[63 61 80 93 71]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[2:8])\n",
+    "print(a[2:8:2])\n",
+    "print(a[::2])\n",
+    "# print(a[::0]) # ValueError: slice step cannot be zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a886ee59-f700-4510-978a-be9efa97222b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50 71 81 93  6 80 83 61 70 63]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How to reverse an array \n",
+    "print(a[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f942b5fa-e976-41d7-bebd-5ffcb6653abc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[ 6 80 83]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[5:-8])\n",
+    "print(a[5:-8:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23384a6b-96d6-400e-9564-175ff8478de1",
+   "metadata": {},
+   "source": [
+    "#### 2b. 2-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c19550c3-5cfa-477e-8318-b4437c9972b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[39 80 62 76]\n",
+      " [38 39 94 47]\n",
+      " [83 99 42 71]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(3,4))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ef086f42-b6b0-4355-9715-43a7983ebe23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[39 80 62 76]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "70d5fece-53b2-43d1-8e74-a1b2dfd3272d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[39 80 62 76]\n",
+      " [38 39 94 47]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:2,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6dd6526a-f579-4c62-a1aa-43b13d0664fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[62 76]\n",
+      " [94 47]\n",
+      " [42 71]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# last two elements of each row\n",
+    "print(a[:,2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e0d01625-88b9-4147-b967-a27f690726db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[76]\n",
+      " [47]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# last element of first two rows \n",
+    "print(a[:2, 3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "93697d64-d78f-49a4-9dac-5a341ff01685",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[39 80 62 76]\n",
+      " [83 99 42 71]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step Size with 2-D Array \n",
+    "print(a[::2,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "583ed560-ff2b-4b9e-bd2f-5fcbf3e854f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[71 78]\n",
+      " [33 73]\n",
+      " [47 47]\n",
+      " [88 52]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:,::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "11846a35-631c-4e20-879c-f8f70b63d988",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[71 38 78 58]\n",
+      " [33 28 73 35]\n",
+      " [47 96 47 43]\n",
+      " [88  3 52 85]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(4,4))\n",
+    "print(a) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "92e80f64-99c6-4899-b96c-54233874d275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[22 60]\n",
+      " [93  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "[[22 60]\n",
+    " [93  5]]\n",
+    "'''\n",
+    "print(a[1:3,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ab028e04-738b-4ea5-929c-f22669e5d0ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[22 42]\n",
+      " [39 97]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "[[22 42]\n",
+    " [39 97]]\n",
+    "'''\n",
+    "print(a[::3,::3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35d81b5-db2d-44fe-b025-fedc97491000",
    "metadata": {},
    "outputs": [],
    "source": []
