--- a/Numpy/rivision1.ipynb
+++ b/Numpy/rivision1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "53a7300f-61a2-4c59-99d2-8a5390ea29c3",
    "metadata": {},
    "outputs": [],
@@ -1048,9 +1048,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b52b9c51-521d-408f-b20a-c42d1912c5e7",
+   "metadata": {},
+   "source": [
+    "#### Slicing 2-D ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6299deab-603e-4529-a664-8d066d1ac558",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[83 58 27 15]\n",
+      " [17  7 26  2]\n",
+      " [32  2 51 94]\n",
+      " [15 93 68 94]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,101,(4,4))\n",
+    "print(a) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "af3fd1fb-2ea2-4b26-9302-6a71b1e4064c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7 26]\n",
+      " [ 2 51]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "[[ 7 26]\n",
+    " [ 2 51]]\n",
+    "'''\n",
+    "print(a[1:3,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "136cbd03-7ba7-438f-b8ec-1965807fe4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[83 15]\n",
+      " [15 94]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "[[83 15]\n",
+    " [15 94]]\n",
+    "'''\n",
+    "print(a[::3,::3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc1090f2-b98a-4987-99e0-6ff07f4306fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[58 27]\n",
+      " [93 68]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "[[58 27]\n",
+    " [93 68]]\n",
+    "'''\n",
+    "print(a[::3,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9f6192cd-8398-49a8-bd37-b3c2b1888a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[17  2]\n",
+      " [32 94]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "[[17  2]\n",
+    " [32 94]]\n",
+    "'''\n",
+    "print(a[1:3,::3])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4e817a-e5c5-4aae-923f-7fda78f8586d",
+   "id": "5a1fd4fc-a7ee-43c5-9e8f-ea5c2e676c3a",
    "metadata": {},
    "outputs": [],
    "source": []
